--- a/src/glmgen/Makefile
+++ b/src/glmgen/Makefile
@@ -1,8 +1,35 @@
+# Detect Operating System
+ifeq ($(OS),Windows_NT)
+    detected_OS := Windows
+else
+    detected_OS := $(shell sh -c 'uname -s 2>/dev/null || echo not')
+endif
+
+# Set Windows Specific Environment Variables: TODO
+ifeq ($(detected_OS),Windows)
+    echo "Installation on Windows not currently supported."
+endif
+
+# Set MacOS Specific Environment Variables
+ifeq ($(detected_OS),Darwin)
+    EXT=.dylib
+    LDFLAGS = -dynamiclib
+endif
+
+# Set Linux Specific Environment Variables
+ifeq ($(detected_OS),Linux)
+    EXT=.so
+    LDFLAGS = -shared
+endif
+
+# TODO: Set Compiler Specific Environment Variables
+
 CC=icc
 CFLAGS=-O3 -Wall -Wextra -ansi -std=c89 -pedantic
 CFLAGS2=-O3
 OBJ=obj/*.o
 IDIR=../include/
+TARGET=lib/libglmgen${EXT}
 
 all:
 	mkdir -p lib
@@ -10,7 +37,7 @@ all:
 	cd obj; ${CC} ${CLFAGS2} -c -fPIC ../src/csparse/*.c -I${IDIR}
 	cd obj; ${CC} ${CFLAGS}  -c -fPIC ../src/utils/*.c -I${IDIR}
 	cd obj; ${CC} ${CFLAGS}  -c -fPIC ../src/tf/*.c -I${IDIR}
-	${CC} -shared -o lib/libglmgen.so ${OBJ}
+	${CC} ${LDFLAGS} -o ${TARGET} ${OBJ}
 
 clean:
 	rm -rf lib
